# webaggregator

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
.github/workflows/: ci-cd.yml
src/: func.rs  handlers.rs  main.rs  models.rs  templates.rs
src/api/: models.rs  templates.rs  tools.rs
src/handlers/: balance.rs  borrow.rs  bots.rs  candle.rs  currency.rs  errors.rs  events.rs  index.rs  lend.rs  mod.rs  orders.rs  pg.rs  position.rs  smastrategy.rs  strategy.rs  symbol.rs  system.rs  ticker.rs
static/: style.css
templates/: base.html  borrow.html  borrows.html  currencies.html  currency.html  index.html  lend.html  lends.html  symbol.html  symbols.html  ticker.html  tickers.html  trade_symbols.html
templates/balance/: balance.html
templates/borrow/: borrow.html  borrows.html
templates/bots/: bots.html
templates/candle/: candle.html  candles.html
templates/dva/: dva.html  dvas.html
templates/errors/: errors.html
templates/events/: events.html  msgevents.html  msgsend.html
templates/index/: index.html
templates/lend/: lend.html  lends.html
templates/orders/: activeorders.html  eventorders.html
templates/pg/: pg.html
templates/position/: positionasset.html  positiondebt.html  positionratio.html
templates/sma/: candle.html  candles.html
templates/strategy/: onestrategy.html  strategy.html
templates/ticker/: ticker.html
