[package]
name = "webaggregator"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.14"
sqlx = { version = "0.9.0", features = ["postgres", "runtime-tokio", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.52" }
askama = { version = "0.16.0", features = ["serde_json"]}
chrono = { version = "0.4", features = ["serde"]  }
log = "0.4"
env_logger = "0.11"
futures = "0.3.32"
dotenvy = "0.15.7"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0