[package]
name = "webaggregator"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.14"

sqlx = { version = "0.9.0", features = ["postgres", "runtime-tokio", "chrono", "tls-rustls"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.53", features = ["rt-multi-thread", "macros"]}
askama = { version = "0.16.0", features = ["serde_json"]}
chrono = { version = "0.4", features = ["serde"]  }
log = "0.4"
env_logger = "0.11"
futures = "0.3.33"
dotenvy = "0.15.7"
anyhow = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
incremental = false

[profile.dev]
opt-level = 0
